--- a/myStyle.css
+++ b/myStyle.css
@@ -1,4 +1,4 @@
-body, main {background-color: aqua;}
+body, main {background-color: rgb(240, 241, 241);}
 main{
   width: 800px;
   display: inline-block;
@@ -40,6 +40,7 @@ a:hover {
 section {
   display: inline-block;
   width: 100%;
+  margin-top: 170px;
 
 }
 div{
